--- a/src/app/modules/about/about.component.html
+++ b/src/app/modules/about/about.component.html
@@ -154,7 +154,7 @@
             </div>
          </div>
       </div>
-      <div class="row" homeContact [contact]="contact"></div>
+      <div class="row" softtelligent-homeContact [contact]="contact"></div>
    </div>
 </div>
 <!-- Send message section -->
