--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -36,7 +36,7 @@
          </div>
       </div>
    </div>
-   <!-- Posts grid -->
+   <!-- Posts grid 
    <div class="post-section bg-light section-gap">
       <div class="container">
          <div class="section-title-wrapper">
@@ -50,9 +50,9 @@
             <div class="row" postGrid [postGridContent]="posts"></div>
          </div>
       </div>
-   </div>
-   <!-- Subscribe section -->
-   <div subscribe [subscribeFormClasses]="subscribeFormClasses"></div>
+   </div>-->
+   <!-- Subscribe section 
+   <div subscribe [subscribeFormClasses]="subscribeFormClasses"></div>-->
    <!-- Contact information section -->
    <div class="contact-section section-gap">
       <div class="container">
@@ -63,7 +63,7 @@
                </div>
             </div>
          </div>
-         <div class="row" homeContact [contact]="contact"></div>
+         <div class="row" softtelligent-homeContact [contact]="contact"></div>
       </div>
    </div>
    <!-- Send message section -->
