--- a/src/app/shared/footer2/footer2.component.html
+++ b/src/app/shared/footer2/footer2.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="router?.url != '/sign-up' && router?.url != '/login' && router?.url != '/thank-you' && router?.url != '/not-found' && router?.url != '/maintenance'">
    <!-- Footer section 2 -->
    <div *ngIf="router?.url != '/home'" subscribe [subscribeFormClasses]="subscribeFormClasses"></div>
-   <div footerLogoList [logoList]="footerLogo" class="client-logo"></div>
+  <!--<div footerLogoList [logoList]="footerLogo" class="client-logo"></div>--> 
    <div class="footer-wrapper-2 py-5 bg-light">
       <div class="container container-full-width">
          <div class="row">
