--- a/src/assets/scss/bootstrap/_variables.scss
+++ b/src/assets/scss/bootstrap/_variables.scss
@@ -167,7 +167,7 @@ $link-decoration:       none !default;
 $link-hover-color:      darken($link-color, 15%) !default;
 $link-hover-decoration: underline !default;
 
-
+$dark:                         #0F1010 !default;
 // Grid breakpoints
 //
 // Define the minimum dimensions at which your layout will change,
