--- a/src/assets/scss/core/_scaffolding.scss
+++ b/src/assets/scss/core/_scaffolding.scss
@@ -161,7 +161,8 @@ input, input::-moz-placeholder, textarea::-moz-placeholder {
   @include background-opacity($orange, 0.7);
 }
 .primary-layer {
-  @include background-opacity($blue, 0.8);
+ /* @include background-opacity($blue, 0.8);*/
+@include background-opacity(#0F1010, 0.7);
 }
 .primary-tp-layer {
   border-radius: 10px;
