--- a/src/app/modules/contact/contact.component.html
+++ b/src/app/modules/contact/contact.component.html
@@ -49,7 +49,7 @@
 				</div>
 			</div>
 			<div class="col-sm-12 col-md-12 col-lg-5">
-				<div sendMessage></div>
+				<div angly-sendMessage></div>
 			 </div>
 		 </div>
 	</div>
