--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -2,7 +2,8 @@
 <nav id="mainNav" class="navbar navbar-expand-md navbar-dark fixed-top bg-primary {{router?.url == '/home' ? '' : 'bg-primary'}}">
 	<div class="container">
 		<a class="navbar-brand" [routerLink]="['/', 'home']" routerLinkActive="active-link">
-			<img src="assets/img/angly-logo.png" class="img-fluid" width="110" height="37">
+			<img src="assets/img/Softtelligent-logo.png" class="img-fluid" width="110" height="37">
+			Softtelligent Software Solutions
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="true" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
