--- a/src/assets/scss/_bootstrap-override.scss
+++ b/src/assets/scss/_bootstrap-override.scss
@@ -84,6 +84,7 @@ $cyan:                         #43AE3F !default; // Type Of Green Shade
 $indigo:                       #6610f2 !default;
 $purple:                       #6f42c1 !default;
 $pink:                         #e83e8c !default;
+$dark:                         #0F1010 !default;
 
 
 
@@ -105,7 +106,7 @@ $colors: (
 ) !default;
 
 $theme-colors: (
-  primary:   $blue,
+  primary:   $gray-800,
   secondary: $gray-600,
   success:   $green,
   info:      $teal,
