update google analytics

--- a/src/app/modules/about/about.component.html
+++ b/src/app/modules/about/about.component.html
@@ -7,7 +7,7 @@
 				   <img class="card-img img-fluid border-rad" src="assets/img/about-us.jpg" alt="Card image" width="319" height="300">
 				   	<div class="card-img-overlay black-tp-layer pos-center text-center border-rad">
 				      	<div class="center-holder">
-                     <a data-fancybox href="https://www.youtube.com/watch?v=hw2smSOJIv4" class="play-button">
+                     <a data-fancybox href="" class="play-button">
 								<i>
 									<span class="btn-text"><span>Play</span></span> 
 									<span class="btn-icon"><i class="fa fa-play"></i></span>
